2003-12-31  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* services-conf.in, service.pl.in: made the throw_service
	  directive more generic, it now allows bsd and sysv services
	  to be thrown

2003-12-31  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* service-list.pl.in: added a forbidden service for slack
	* service.pl.in: made it to parse /etc/rc.inet2 too

2003-12-31  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* configure.in: fixed

2003-12-30  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.31.0

2003-12-30  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* autogen.sh, configure.in: changes for passing distcheck

2003-12-29  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Makefile.am, configure.in, boot-conf.in, boot.pl.in: added
	  yaboot support
	* boot-yaboot.pl.in: added
	* boot-lilo.pl.in: fixed a little bug

2003-12-28  Duarte Loreto <happyguy_pt@hotmail.com>

	* configure.in: Added Portuguese (pt) to ALL_LINGUAS.

2003-12-28  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* platform.pl.in: added slackware 9.1 to the platform list
	* service.pl.in, services-conf.in: added slackware support for
	  the services-admin tool, removed unused code
	* users-conf.in: added slackware 9.1 support for users-admin
	* time-conf.in: added slackware 9.1 support for time-admin

2003-12-28  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* configure.in: Added Spanish (es) to ALL_LINGUAS

2003-12-27  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added Czech (cs) to ALL_LINGUAS.

2003-12-26  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* general.pl.in: made the backends to run even when the computer
	  doesn't have the gettext perl library
	* platform.pl.in: added Fedora Core 1 to the supported platforms
	  list
	* network-conf.in, network.pl.in: added support for Fedora Core 1
	* service.pl.in, services-conf.in: ditto
	* time-conf.in: ditto
	* users-conf.in: ditto

2003-12-24  Carlos Garcia Campos <elkalmail@yahoo.es>
