@@ -37,8 +37,11 @@ eval "use Locale::gettext";
 $eval_gettext = $@;
 eval "use POSIX";
 $eval_posix = $@;
+# why the hell does debian package have this function while the rest of the distros hasn't??
+eval "&bind_textdomain_codeset (\"@GETTEXT_PACKAGE@\", \"UTF-8\")";
+$eval_codeset = $@;
 
-$has_i18n = (($eval_gettext eq "") && ($eval_posix eq ""));
+$has_i18n = (($eval_gettext eq "") && ($eval_posix eq "") && ($eval_codeset eq ""));
 
 if ($has_i18n)
 {
